// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouterHelpers should handle location search and hash passthrough values: NO search and hash 1`] = `
Object {
  "routeHref": "/rhel",
}
`;

exports[`RouterHelpers should handle location search and hash passthrough values: hash 1`] = `
Object {
  "routeHref": "/rhel#lorem",
}
`;

exports[`RouterHelpers should handle location search and hash passthrough values: search 1`] = `
Object {
  "routeHref": "/rhel?dolor=sit",
}
`;

exports[`RouterHelpers should handle location search and hash passthrough values: search and hash 1`] = `
Object {
  "routeHref": "/rhel?dolor=sit#lorem",
}
`;

exports[`RouterHelpers should return a generated baseName using NO path prefix: app lorem route name 1`] = `"/appName"`;

exports[`RouterHelpers should return a generated baseName using NO path prefix: empty pathPrefix: app base name 1`] = `"/appName"`;

exports[`RouterHelpers should return a generated baseName using a beta path prefix: beta app base name 1`] = `"/beta/appName"`;

exports[`RouterHelpers should return a generated baseName using a beta path prefix: beta app lorem route name 1`] = `"/beta/appName"`;

exports[`RouterHelpers should return a generated baseName using an insights path prefix: insights, app base name 1`] = `"/insights/appName"`;

exports[`RouterHelpers should return a generated baseName using an insights path prefix: insights, app lorem route name 1`] = `"/insights/appName"`;

exports[`RouterHelpers should return a generated baseName using an insights path prefix: insights, beta app base name 1`] = `"/beta/insights/appName"`;

exports[`RouterHelpers should return a generated baseName using an insights path prefix: insights, beta app lorem route name 1`] = `"/beta/insights/appName"`;

exports[`RouterHelpers should return an error route: error route 1`] = `
Object {
  "activateOnError": true,
  "component": Object {
    "$$typeof": Symbol(react.lazy),
    "_ctor": [Function],
    "_result": null,
    "_status": -1,
  },
  "disabled": false,
  "exact": true,
  "render": true,
  "to": "/optin",
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: match specific path navigation 1`] = `
Object {
  "nav": Object {
    "id": "rhel",
    "isSearchable": true,
    "path": "/rhel",
    "pathParameter": "RHEL",
    "productParameter": "RHEL",
    "routeHref": "/rhel",
    "viewParameter": "viewRHEL",
  },
  "navRoute": Object {
    "component": Object {
      "$$typeof": Symbol(react.lazy),
      "_ctor": [Function],
      "_result": null,
      "_status": -1,
    },
    "disabled": false,
    "exact": true,
    "id": "rhel",
    "isSearchable": true,
    "path": "/rhel",
    "pathParameter": "RHEL",
    "productParameter": "RHEL",
    "render": true,
    "routeHref": "/rhel",
    "to": "/:variant(rhel|rhel-arm|rhel-ibmpower|rhel-ibmz|rhel-x86)",
    "viewParameter": "viewRHEL",
  },
  "route": Object {
    "component": Object {
      "$$typeof": Symbol(react.lazy),
      "_ctor": [Function],
      "_result": null,
      "_status": -1,
    },
    "disabled": false,
    "exact": true,
    "render": true,
    "to": "/:variant(rhel|rhel-arm|rhel-ibmpower|rhel-ibmz|rhel-x86)",
  },
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing ID, specific path 1`] = `
Object {
  "nav": Object {
    "id": "rhel",
    "isSearchable": true,
    "path": "/rhel",
    "pathParameter": "RHEL",
    "productParameter": "RHEL",
    "routeHref": "/rhel",
    "viewParameter": "viewRHEL",
  },
  "navRoute": Object {
    "component": Object {
      "$$typeof": Symbol(react.lazy),
      "_ctor": [Function],
      "_result": null,
      "_status": -1,
    },
    "disabled": false,
    "exact": true,
    "id": "rhel",
    "isSearchable": true,
    "path": "/rhel",
    "pathParameter": "RHEL",
    "productParameter": "RHEL",
    "render": true,
    "routeHref": "/rhel",
    "to": "/:variant(rhel|rhel-arm|rhel-ibmpower|rhel-ibmz|rhel-x86)",
    "viewParameter": "viewRHEL",
  },
  "route": Object {
    "component": Object {
      "$$typeof": Symbol(react.lazy),
      "_ctor": [Function],
      "_result": null,
      "_status": -1,
    },
    "disabled": false,
    "exact": true,
    "render": true,
    "to": "/:variant(rhel|rhel-arm|rhel-ibmpower|rhel-ibmz|rhel-x86)",
  },
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing id and pathname and default 1`] = `
Object {
  "nav": Object {},
  "navRoute": Object {},
  "route": Object {},
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing id and pathname, default 1`] = `
Object {
  "nav": Object {
    "default": true,
    "id": "missing",
    "isSearchable": false,
    "path": "/",
    "pathParameter": null,
    "productParameter": null,
    "routeHref": "/",
    "viewParameter": null,
  },
  "navRoute": Object {
    "component": Object {
      "$$typeof": Symbol(react.lazy),
      "_ctor": [Function],
      "_result": null,
      "_status": -1,
    },
    "default": true,
    "disabled": false,
    "exact": true,
    "id": "missing",
    "isSearchable": false,
    "path": "/",
    "pathParameter": null,
    "productParameter": null,
    "redirect": "/",
    "render": true,
    "routeHref": "/",
    "to": "/",
    "viewParameter": null,
  },
  "route": Object {},
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing parameters 1`] = `
Object {
  "nav": Object {},
  "navRoute": Object {},
  "route": Object {},
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: specific navigation ID 1`] = `
Object {
  "nav": Object {
    "id": "rhel-arm",
    "isSearchable": false,
    "path": "/rhel-arm",
    "pathParameter": "RHEL for ARM",
    "productParameter": "RHEL",
    "routeHref": "/rhel-arm",
    "viewParameter": "viewRHEL",
  },
  "navRoute": Object {
    "component": Object {
      "$$typeof": Symbol(react.lazy),
      "_ctor": [Function],
      "_result": null,
      "_status": -1,
    },
    "disabled": false,
    "exact": true,
    "id": "rhel-arm",
    "isSearchable": false,
    "path": "/rhel-arm",
    "pathParameter": "RHEL for ARM",
    "productParameter": "RHEL",
    "render": true,
    "routeHref": "/rhel-arm",
    "to": "/:variant(rhel|rhel-arm|rhel-ibmpower|rhel-ibmz|rhel-x86)",
    "viewParameter": "viewRHEL",
  },
  "route": Object {},
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: specific route ID 1`] = `
Object {
  "nav": Object {
    "id": "optin",
    "isSearchable": false,
    "path": "/optin",
    "pathParameter": null,
    "productParameter": null,
    "routeHref": "/optin",
    "viewParameter": null,
  },
  "navRoute": Object {
    "activateOnError": true,
    "component": Object {
      "$$typeof": Symbol(react.lazy),
      "_ctor": [Function],
      "_result": null,
      "_status": -1,
    },
    "disabled": false,
    "exact": true,
    "id": "optin",
    "isSearchable": false,
    "path": "/optin",
    "pathParameter": null,
    "productParameter": null,
    "render": true,
    "routeHref": "/optin",
    "to": "/optin",
    "viewParameter": null,
  },
  "route": Object {},
}
`;
